[gd_scene load_steps=10 format=3 uid="uid://f2kwi3v03aew"]

[ext_resource type="Script" path="res://scripts/quest_progress_bar.gd" id="1_e74i8"]
[ext_resource type="Texture2D" uid="uid://b8gd5a5vgq4i1" path="res://art/kenney ui assets/PNG/Extra/Default/bar_shadow_round_large.png" id="1_v8e4e"]
[ext_resource type="Texture2D" uid="uid://dmq8temxegorl" path="res://resources/quest-progress-gradient-texture.tres" id="2_cpkww"]
[ext_resource type="Texture2D" uid="uid://d0g2hewccxhsx" path="res://art/kenney ui assets/PNG/Grey/Default/bar_round_gloss_large.png" id="3_b870t"]
[ext_resource type="Texture2D" uid="uid://k8w1v3nv0mx7" path="res://art/item art/crafting_materials/resources_basic.png" id="5_3tdg6"]

[sub_resource type="Curve" id="Curve_thvod"]
_data = [Vector2(0.636872, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_bnvtd"]
curve = SubResource("Curve_thvod")

[sub_resource type="AtlasTexture" id="AtlasTexture_6v0tk"]
atlas = ExtResource("5_3tdg6")
region = Rect2(144, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnucx"]
atlas = ExtResource("5_3tdg6")
region = Rect2(24, 72, 24, 24)

[node name="quest_progress_bar" type="CanvasLayer"]
script = ExtResource("1_e74i8")
gradient = ExtResource("2_cpkww")

[node name="bg" type="Sprite2D" parent="."]
modulate = Color(0.340339, 0.340339, 0.340339, 0.784314)
position = Vector2(70.75, 12)
scale = Vector2(0.55664, 24)
texture = SubResource("CurveTexture_bnvtd")

[node name="quest_progress" type="TextureProgressBar" parent="."]
modulate = Color(1, 1, 1, 0.705882)
offset_left = 23.0
offset_top = 4.0
offset_right = 119.0
offset_bottom = 28.0
scale = Vector2(1, 0.7)
value = 50.0
texture_under = ExtResource("1_v8e4e")
texture_progress = ExtResource("3_b870t")

[node name="start_sprite" type="Sprite2D" parent="."]
position = Vector2(12, 12)
texture = SubResource("AtlasTexture_6v0tk")

[node name="end_sprite" type="Sprite2D" parent="."]
position = Vector2(130, 12)
texture = SubResource("AtlasTexture_wnucx")

[node name="npc_icon_sprite" type="Sprite2D" parent="."]
position = Vector2(72, 12)
